--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
     height: 10vh;
     background-color: rgba(0,0,0,0.3);
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     align-items: center;
 }
 
